use .isBlank() instead of .trim().isEmpty()